// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Compilation Tests: Code Transformation > should allow custom inline identifier > /Users/carl/Code/unplugin-inline/tests/fixtures/custom-identifier.ts 1`] = `
"let _subtractResult;
_subtractLabel: {
  const _a = 10;
  const _b = 5;
  _subtractResult = _a - _b;
  break _subtractLabel;
}
const result = _subtractResult;
export {
  result
};
"
`;

exports[`Compilation Tests: Code Transformation > should handle functions with no return value (void) > /Users/carl/Code/unplugin-inline/tests/fixtures/void-function.ts 1`] = `
"let input = {
  a: 2
};
let _doSomethingResult;
_doSomethingLabel: {
  const _obj = input;
  _obj.a += 1;
  _doSomethingResult = void 0;
  break _doSomethingLabel;
}
const res = _doSomethingResult;
const finalSideEffect = input;
export {
  finalSideEffect,
  res
};
"
`;

exports[`Compilation Tests: Code Transformation > should handle multiple return statements > /Users/carl/Code/unplugin-inline/tests/fixtures/early-return.ts 1`] = `
"let _isPositiveResult;
_isPositiveLabel: {
  const _n = 10;
  if (_n > 0) {
    _isPositiveResult = true;
    break _isPositiveLabel;
  }
  _isPositiveResult = false;
  break _isPositiveLabel;
}
const pos = _isPositiveResult;
let _isPositiveResult2;
_isPositiveLabel2: {
  const _n2 = -5;
  if (_n2 > 0) {
    _isPositiveResult2 = true;
    break _isPositiveLabel2;
  }
  _isPositiveResult2 = false;
  break _isPositiveLabel2;
}
const neg = _isPositiveResult2;
export {
  neg,
  pos
};
"
`;

exports[`Compilation Tests: Code Transformation > should handle parameter mapping correctly > /Users/carl/Code/unplugin-inline/tests/fixtures/complex-params.ts 1`] = `
"let counter = 0;
function inc() {
  return ++counter;
}
let _multiplyResult;
_multiplyLabel: {
  const _a = inc();
  const _b = inc();
  _multiplyResult = _a * _b;
  break _multiplyLabel;
}
const result = _multiplyResult;
const finalCounter = counter;
export {
  finalCounter,
  result
};
"
`;

exports[`Compilation Tests: Code Transformation > should inline a simple arrow function returning a literal > /Users/carl/Code/unplugin-inline/tests/fixtures/simple-add-arrow.ts 1`] = `
"const add = (a, b) => {
  return a + b;
};
let _addResult;
_addLabel: {
  const _a = 10;
  const _b = 20;
  _addResult = _a + _b;
  break _addLabel;
}
const result = _addResult;
export {
  result
};
"
`;

exports[`Compilation Tests: Code Transformation > should inline a simple function returning a literal > /Users/carl/Code/unplugin-inline/tests/fixtures/simple-add.ts 1`] = `
"let _addResult;
_addLabel: {
  const _a = 10;
  const _b = 20;
  _addResult = _a + _b;
  break _addLabel;
}
const result = _addResult;
export {
  result
};
"
`;

exports[`Compilation Tests: Code Transformation > should not inline functions without @inline comment > /Users/carl/Code/unplugin-inline/tests/fixtures/no-inline.ts 1`] = `
"function keepMe() {
  return 1;
}
const k = keepMe();
export {
  k
};
"
`;

exports[`Compilation Tests: Code Transformation > should properly scope variables to avoid collisions > /Users/carl/Code/unplugin-inline/tests/fixtures/variable-collision.ts 1`] = `
"const x = 100;
const outerX = x;
let _getInnerXResult;
_getInnerXLabel: {
  const _x = 5;
  _getInnerXResult = _x;
  break _getInnerXLabel;
}
const innerX = _getInnerXResult;
export {
  innerX,
  outerX
};
"
`;

exports[`Compilation Tests: Code Transformation > should work on missing arguments > /Users/carl/Code/unplugin-inline/tests/fixtures/missing-arguments.js 1`] = `
"let _addOptionalResult;
_addOptionalLabel: {
  const _a = 10;
  const _b = void 0;
  _addOptionalResult = _b === void 0 ? _a : _a + _b;
  break _addOptionalLabel;
}
const result = _addOptionalResult;
export {
  result
};
"
`;

exports[`Compilation Tests: Code Transformation > should work on nested function calls > /Users/carl/Code/unplugin-inline/tests/fixtures/nested-calls.js 1`] = `
"let _quadrupleResult;
_quadrupleLabel: {
  const _n = 10;
  let _doubleResult;
  _doubleLabel: {
    const _n2 = _n;
    _doubleResult = _n2 * 2;
    break _doubleLabel;
  }
  _quadrupleResult = _doubleResult * 2;
  break _quadrupleLabel;
}
const val = _quadrupleResult;
export {
  val
};
"
`;

exports[`Compilation Tests: Code Transformation > should work on nested functions > /Users/carl/Code/unplugin-inline/tests/fixtures/nested-function.js 1`] = `
"let _withNestedResult;
_withNestedLabel: {
  const _val = 5;
  const _innerAdder = (x) => {
    return x + _val;
  };
  _withNestedResult = _innerAdder(10);
  break _withNestedLabel;
}
const result = _withNestedResult;
export {
  result
};
"
`;

exports[`Compilation Tests: Code Transformation > should work on plain JS files (without TS syntax) > /Users/carl/Code/unplugin-inline/tests/fixtures/plain-js.js 1`] = `
"let _multiplyResult;
_multiplyLabel: {
  const _a = 2;
  const _b = 3;
  _multiplyResult = _a * _b;
  break _multiplyLabel;
}
exports.res = _multiplyResult;
"
`;
